docs/apache-airflow-providers-weaviate/3.0.1/_sources/_api/airflow/providers/weaviate/operators/weaviate/index.rst.txt
airflow.providers.weaviate.operators.weaviate
=============================================

.. py:module:: airflow.providers.weaviate.operators.weaviate


Classes
-------

.. autoapisummary::

   airflow.providers.weaviate.operators.weaviate.WeaviateIngestOperator
   airflow.providers.weaviate.operators.weaviate.WeaviateDocumentIngestOperator


Module Contents
---------------

.. py:class:: WeaviateIngestOperator(conn_id, collection_name, input_data = None, vector_col = 'Vector', uuid_column = 'id', tenant = None, hook_params = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`


   Operator that store vector in the Weaviate class.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:WeaviateIngestOperator`

   Operator that accepts input json or pandas dataframe to generate embeddings on or accepting provided
   custom vectors and store them in the Weaviate class.

   :param conn_id: The Weaviate connection.
   :param collection: The Weaviate collection to be used for storing the data objects into.
   :param input_data: The list of dicts or pandas dataframe representing Weaviate data objects to generate
       embeddings on (or provides custom vectors) and store them in the Weaviate class.
   :param vector_col: key/column name in which the vectors are stored.
   :param hook_params: Optional config params to be passed to the underlying hook.
       Should match the desired hook constructor params.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('input_data',)



   .. py:attribute:: collection_name


   .. py:attribute:: conn_id


   .. py:attribute:: vector_col
      :value: 'Vector'



   .. py:attribute:: uuid_column
      :value: 'id'



   .. py:attribute:: tenant
      :value: None



   .. py:attribute:: input_data
      :value: None



   .. py:attribute:: hook_params


   .. py:property:: hook
      :type: airflow.providers.weaviate.hooks.weaviate.WeaviateHook


      Return an instance of the WeaviateHook.



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: WeaviateDocumentIngestOperator(conn_id, input_data, collection_name, document_column, existing = 'skip', uuid_column = 'id', vector_col = 'Vector', tenant = None, verbose = False, hook_params = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`


   Create or replace objects belonging to documents.

   In real-world scenarios, information sources like Airflow docs, Stack Overflow, or other issues
   are considered 'documents' here. It's crucial to keep the database objects in sync with these sources.
   If any changes occur in these documents, this function aims to reflect those changes in the database.

   .. note::

       This function assumes responsibility for identifying changes in documents, dropping relevant
       database objects, and recreating them based on updated information. It's crucial to handle this
       process with care, ensuring backups and validation are in place to prevent data loss or
       inconsistencies.

   Provides users with multiple ways of dealing with existing values.
   replace: replace the existing objects with new objects. This option requires to identify the
   objects belonging to a document. which by default is done by using document_column field.
   skip: skip the existing objects and only add the missing objects of a document.
   error: raise an error if an object belonging to a existing document is tried to be created.

   :param data: A single pandas DataFrame or a list of dicts to be ingested.
   :param collection_name: Name of the collection in Weaviate schema where data is to be ingested.
   :param existing: Strategy for handling existing data: 'skip', or 'replace'. Default is 'skip'.
   :param document_column: Column in DataFrame that identifying source document.
   :param uuid_column: Column with pre-generated UUIDs. If not provided, UUIDs will be generated.
   :param vector_column: Column with embedding vectors for pre-embedded data.
   :param tenant: The tenant to which the object will be added.
   :param verbose: Flag to enable verbose output during the ingestion process.
   :param hook_params: Optional config params to be passed to the underlying hook.
       Should match the desired hook constructor params.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('input_data',)



   .. py:attribute:: conn_id


   .. py:attribute:: input_data


   .. py:attribute:: collection_name


   .. py:attribute:: document_column


   .. py:attribute:: existing
      :value: 'skip'



   .. py:attribute:: uuid_column
      :value: 'id'



   .. py:attribute:: vector_col
      :value: 'Vector'



   .. py:attribute:: tenant
      :value: None



   .. py:attribute:: verbose
      :value: False



   .. py:attribute:: hook_params


   .. py:property:: hook
      :type: airflow.providers.weaviate.hooks.weaviate.WeaviateHook


      Return an instance of the WeaviateHook.



   .. py:method:: execute(context)

      Create or replace objects belonging to documents.

      :return: List of UUID which failed to create



